objects/Job_Task__c/Job_Task__c.object-meta.xml
<CustomObject>
    <description>This is Job Task object. Also known as Schedule.</description>
    <label>Job Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>