objects/Job_Task__c/fields/Assigned_Users__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Users__c</fullName>
    <label>Staff</label>
    <length>250</length>
    <type>Text</type>
</CustomField>