objects/Job_Task__c/fields/Content_Document_ID__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_ID__c</fullName>
    <label>Content Document ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>