objects/Job_Task__c/fields/Current_Status_Task_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Task_Name__c</fullName>
    <formula>If( Current_Status_Task_Order__c =  Task_Order__c ,  Name &amp; &quot; &quot;&amp; Text( Revised_Due_Date__c), &quot;&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status Task Name</label>
    <type>Text</type>
</CustomField>