objects/Job_Task__c/fields/Current_Status_Task_Order__c.field-meta.xml
<CustomField>
    <fullName>Current_Status_Task_Order__c</fullName>
    <formula>IF( ISBLANK( Completion_Date__c)  ,Task_Order__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Status Task Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>