objects/Job_Task__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Auto Due Date</label>
    <type>Date</type>
</CustomField>