objects/Job_Task__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Staff Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>