objects/Job_Task__c/fields/Has_Approval_steps__c.field-meta.xml
<CustomField>
    <fullName>Has_Approval_steps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Approval steps</label>
    <type>Checkbox</type>
</CustomField>