objects/Job_Task__c/fields/Has_Inprogress_Approval_Steps__c.field-meta.xml
<CustomField>
    <fullName>Has_Inprogress_Approval_Steps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the approval process has in progress then it is checked</description>
    <label>Has Inprogress Approval Steps</label>
    <type>Checkbox</type>
</CustomField>