objects/Job_Task__c/fields/Login_User__c.field-meta.xml
<CustomField>
    <fullName>Login_User__c</fullName>
    <formula>IF( CONTAINS(Assigned_Users__c, $User.FirstName + &apos; &apos; +$User.LastName), True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Login User</label>
    <type>Checkbox</type>
</CustomField>