objects/Job_Task__c/fields/Marked_Done__c.field-meta.xml
<CustomField>
    <fullName>Marked_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked Done</label>
    <type>Checkbox</type>
</CustomField>