objects/Job_Task__c/fields/Revised_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Due_Date__c</fullName>
    <label>Final Due Date</label>
    <type>Date</type>
</CustomField>