objects/Job_Task__c/fields/Schedule_Roles__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Roles__c</fullName>
    <label>Schedule Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Designer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>