objects/Job_Task__c/fields/Task_End_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Task_End_Time_Text__c</fullName>
    <inlineHelpText>Please enter in this format &quot;HH:MM AM/PM&quot; only</inlineHelpText>
    <label>Task End Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>