objects/Job_Task__c/validationRules/JobSuite_Task_End_Time_Text.validationRule-meta.xml
<ValidationRule>
    <fullName>JobSuite_Task_End_Time_Text</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(OR(
ISBLANK(Task_End_Time_Text__c ),REGEX( Task_End_Time_Text__c ,
&apos;^(([0]?[1-9])|([1][0-2])):([0-5][0-9]) {1}(AM|PM|am|pm)$&apos;)))</errorConditionFormula>
    <errorDisplayField>Task_End_Time_Text__c</errorDisplayField>
    <errorMessage>Please enter valid Time format</errorMessage>
</ValidationRule>