objects/Job_Task__c/validationRules/Task_Time_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_Time_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>VALUE( Task_Start_Time_Text__c )   &gt;  VALUE(  Task_End_Time_Text__c )</errorConditionFormula>
    <errorDisplayField>Task_End_Time_Text__c</errorDisplayField>
    <errorMessage>Please enter the end time greater than the start time</errorMessage>
</ValidationRule>