objects/Job_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job__c</columns>
    <columns>NAME</columns>
    <columns>Revised_Due_Date__c</columns>
    <columns>Assigned_Users__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Tasks Due</label>
</ListView>