objects/Job_Task__c/listViews/My_Tasks_Due_Today.listView-meta.xml
<ListView>
    <fullName>My_Tasks_Due_Today</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>Completion_Date__c</columns>
    <columns>Revised_Due_Date__c</columns>
    <columns>Assigned_Users__c</columns>
    <columns>Marked_Done__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Revised_Due_Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Assigned_Users__c</field>
        <operation>startsWith</operation>
        <value>Steve</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>My Tasks Due Today</label>
</ListView>